invoicetome/static/css/main.css
html {
	/*background:#27a url(../images/scuff.png);*/
	background: #fcffff url(../images/paper.png);
    position: relative;
    /*
	margin-top: -50px;
	min-width: 960px;
	margin-bottom: -500px;
    */
}

body {
	background: none;
	font-family: "Helvetica Neue", Arial, sans-serif;
    position: relative;
    height:100%;
    min-height: 100%;
}

.main-nav {
    /*position: absolute;*/
    z-index: 8;
}

#invoice-detail {
    padding: 0;
}
#invoice {
	position: relative;
	opacity: 0.99;
	padding:45px;
	background: #fff;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
    border-radius: 0;
	border: 1px solid #ddd;
	overflow: hidden;
    margin: 0 auto 0;
    border-top: 0;
}

input  {
	border:0;
	border: 1px;
	background: none;
	padding:0;
	font-size:15px;
	color: #222;
	font-family: "Helvetica Neue",arial,sans;
	line-height:23px;
}

input, textarea {
    -webkit-appearance: none;
    -webkit-border-radius: 0;
    background: transparent;
    border: 1px;
}

.header {
    margin-bottom: 50px;
}

#company {
	font-size: 25px;
	font-weight: bold;
	line-height:56px;
	height:56px;
	/*width:420px !important;*/
	}

#title {
	font-size: 35px;
	font-weight: bold;
	height:56px;
	margin-bottom:0;
}

input.rr {
	text-align: right;
}

#address, #meta {
	margin-top: 15px;
	}

.client {
	font-weight: bold;
	font-size: 18px;
	line-height: 24px;
	}

textarea.notes {
	padding-top: 20px;
	font-family: "Helvetica Neue",arial,sans;
	font-size: 14px;
	background:none;
	line-height:21px;
	border:0;
	resize: none;
	font-size: 15px;
	margin: 10px auto 0px auto;
	height:10px;
	}

/*______________________________Table______________________________*/

thead th input, tfoot th input, tfoot th.noteditable {background:rgba(0,0,0,0.1);}
tbody tr:nth-child(even) input, tbody tr:nth-child(even) .noteditable {background:rgba(0,0,0,0.05);}

#total input, #total .noteditable {
	background: rgba(0,0,0,0.2);
	}

table input {
	margin:0 !important;
	}

table td, table th, table input {
	height: 25px !important;
	}

tfoot tr th {
	border-top: 1px solid #aaa;
	}

th input {
	font-weight: bold;
	}

table input {
	width:100% !important;
	margin-right: -10px;
	padding: 0!important;
	margin-top: -1px;
	line-height: 24px;
	text-indent: 10px;
	font-size: 14px;
	font-family: "Helvetica Neue",arial,sans;
	}

td, thead th {
	border-right: 1px solid #aaa;
	}

td:nth-child(4), td:nth-child(5), th:nth-child(4), th:nth-child(5) {
	border-right: 0;
	}

td:last-child, th:last-child {
	border-left: 1px solid #aaa;
	}

table {
	border: 1px solid #aaa;
	}

table {
	font-size: 14px;
	}

tfoot {
	font-style:normal;
	}

tbody td:last-child {
	font-weight: bold;
	}

/*______________________________Editing Styles______________________________*/

textarea:focus, input:focus {
	background: rgba(255,255,100,0.4)!important;
	background: -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,100,0.5)), to(rgba(255,255,100,0.1)))!important;
	color: #000;
	text-shadow: #fff 1px 1px;
	-webkit-box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
	}
.ll:focus {
	background: -webkit-gradient(linear, left top, right top, from(rgba(255,255,100,0.5)), to(rgba(255,255,100,0.2)))!important;
	}
.rr:focus {
	background: -webkit-gradient(linear, right top, left top, from(rgba(255,255,100,0.5)), to(rgba(255,255,100,0.2)))!important;
	}

.noteditable {
	text-indent: 10px;
	}

.noteditable:hover {
	text-shadow: white 1px 1px;
	width:10px !important;
	cursor: not-allowed;
	}

.noteditable:hover:first-line {
	line-height: 0;
	color: rgba(0,0,0,0);
	font-size:1px;
	text-shadow: none;
	}

#taxrate:hover:after, #taxrate:focus:after {
	content: "(Include the tax rate percentage here for calculation)";
	float:right;
	margin-top:-24px;
	margin-right:40px;
	font-weight: normal;
	color: #27a;
	font-family: monospace;
	overflow: hidden;
	}


.noteditable:hover:after {
		clear: both;
		float: left;
		content: "Auto";
		font-weight: normal;
		color: #27a;
		font-family: monospace;
	}


input {
	overflow: hidden;
	}



.btn-custom {
	text-shadow: 0 -1px 1px rgba(0,0,0,0.3);
	border-top: 1px solid rgba(0,0,0,0.1);
	background:#27a ;
	background-image: linear-gradient(top, #0ac, #27a);
	background-image: -moz-linear-gradient(top, #0ac, #27a);
	background-image: -webkit-gradient(linear, left top, left bottom, from(#0ac), to(#27a));
	margin-top:1px;
	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.8);
	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.8);

}
a.button:link, a.button:visited {
	display: inline-block;
	padding: 10px 20px 8px;
	color: #fff;
	text-decoration: none;
	font-weight: bold;
	line-height: 1;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	text-shadow: 0 -1px 1px rgba(0,0,0,0.3);
	margin-left:0;
	position: relative;
	font-size:14px;
	cursor: pointer;
	margin-top:1px;
    text-align: center;
    width:140px;

}

a.button:hover{
	background-image: linear-gradient(top, #0ac, #0ac);
	background-image: -moz-linear-gradient(top, #0ac, #0ac);
	background-image: -webkit-gradient(linear, left top, left bottom, from(#0ac), to(#0ac));
}


a.button:active {
	margin-top:2px;
	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.4);
}

.wrapper {
    margin: 0 auto 40px;
}

#login-block {
}
.logout-link {
    font-size: 15px;
    color: #6ce;
    font-weight: 700;
    text-decoration: none;
}
.logout-link:hover {
    color: #fff;
}

#invoice-form .edit-help {
    /*
    position:absolute;
    top: 0;
    right: 2px;
    z-index: 9;
    */
}

#invoice-list {
    position: fixed;
    z-index:10;
    border-radius: 0;
    padding-left: 0;
    height:100%;
    top: 100px;
    padding-right: 0;
}
#invoice-list.affix {
    top: 52px;
    padding-bottom: 52px;
}

#invoice-list a {
    padding: 10px 5px 10px 15px;
    z-index: 1;
}
#invoice-list.affix .invoice-list-title {
    top: -40px;
    left: 220px;
}
#invoice-list a i {
    font-weight: 100;
    background: #fdefde;
    border-radius: 3px;
    padding: 3px;
}

#invoice-list .list-group-item {
    border-radius: 0;
}
.list-group-item {
    background-color: #f9f9f9;
}
#invoice-list a.active i {
    color: #404040;
}
#invoice-list a i.btn-remove {
    color: #fff;
    background: #c9302c;
	transition: bottom 0.3s;
}
#invoice-list a i.btn-remove:hover {
    padding: 5px;
}

#invoice-list a i.btn-share {
    color: #fff;
    background: #5cb85c;
	transition: bottom 0.3s;
}
#invoice-list a i.btn-share:hover {
    padding: 5px;
}
#invoice-list .invoice-list-title {
    position: fixed;
    top: 60px;
    z-index: 19;
    left: 220px;
}
#invoice-history {
    margin: 0 auto;
}
#invoice-history h3 {
}
#invoice-history .list-group {
    margin-right:0;
}
.toggler {
    border-radius: 0 3px 3px 0;
    margin-left: -30px;
    margin-right: 10px;
    padding: 5px 10px 5px 0;
}

.list-group a:link,
.list-group a:visited {
    text-shadow: none;
    color:#555;
}
.list-group a.active {
    color:#fff;
}
.list-group a:hover {
    color:#555;
    text-shadow: none;
}

#message-placeholder {
    position: fixed;
    top: 50px;
    right: 0;
    left: 0;
    z-index: 99;
}
#message-placeholder .alert {
    border-radius: 0;
}

.actions-nav {
    z-index: 9;
    top: 0;
    margin-bottom: 0;
    border-width: 1px 0 1px 0;
    border-radius: 0;
    z-index: 19;
}
.actions-nav.affix {
    width: 100%;
}
.actions-nav.in {
    z-index: 7;
}
.offcanvas-toggle.pull-left {
    margin-left: 15px;
    margin-right: 0;
}
#actions-bar {
    padding: 0;
}
#actions-bar.affix {
    z-index: 9;
    top: 0;
    background:#f8f8f8;
    border-bottom: 1px solid #e7e7e7;
}

#actions-bar.affix .col-md-9 {
    width: 100%;
}

@media (max-width: 768px) {
    #actions-navbar-collapse.affix { width: 0; }
    .actions-nav {top: 50px;}
}
.table-manage {
    position: absolute;
    bottom: 75px;
    left: -25px;
    list-style: none;
    margin: 0;
    padding: 0;
}
.table-manage #addRow {
    margin-top: 5px;
}
.table-manage #addRow,
.table-manage #delRow {
    padding: 5px;
    display:block;
}

.ribbon {
    font: 13px Sans-Serif;
    color: #333;
    text-align: center;
    text-shadow: rgba(255,255,255,0.5) 0px 1px 0px;
    -webkit-transform: rotate(45deg);
    -moz-transform:    rotate(45deg);
    -ms-transform:     rotate(45deg);
    -o-transform:      rotate(45deg);
    position: relative;
    padding: 7px 0;
    left: -5px;
    top: 15px;
    width: 120px;
    background-color: #3071a9;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#3071a9), to(#285e8e));
    background-image: -webkit-linear-gradient(top, #3071a9, #285e8e);
    background-image:    -moz-linear-gradient(top, #3071a9, #285e8e);
    background-image:     -ms-linear-gradient(top, #3071a9, #285e8e);
    background-image:      -o-linear-gradient(top, #3071a9, #285e8e);
    color: #fff;
    -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
    -moz-box-shadow:    0px 0px 3px rgba(0,0,0,0.3);
    box-shadow:         0px 0px 3px rgba(0,0,0,0.3);
}
.ribbon-wrapper {
    width: 85px;
    height: 88px;
    overflow: hidden;
    position: absolute;
    top: 0;
    right: 0;
    z-index:10;
}
.ribbon-wrapper:hover {
    text-decoration: none;
}
.ribbon-wrapper:hover .ribbon,
.ribbon-wrapper.signed .ribbon {
    background-color: #BFDC7A;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#BFDC7A), to(#8EBF45));
    background-image: -webkit-linear-gradient(top, #BFDC7A, #8EBF45);
    background-image:    -moz-linear-gradient(top, #BFDC7A, #8EBF45);
    background-image:     -ms-linear-gradient(top, #BFDC7A, #8EBF45);
    background-image:      -o-linear-gradient(top, #BFDC7A, #8EBF45);
    color: #6a6340;
}

#hsEmbeddedOverlay {
    display: block !important;
}

